--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,8 @@
 			"version": "latest",
 			"enableNonRootDocker": "true",
 			"moby": "true"
-		}
+		},
+		"ghcr.io/devcontainers/features/java:1": {} 
 	}
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
