--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,7 @@
       "mainClass": "Example",
       "projectName": "libc-intcep_2b9d990c",
       "env": {
+        //LD_PRELOAD expects fullpath
         "LD_PRELOAD": "${workspaceRoot}/intercept.so"
       }
     },
@@ -14,11 +15,11 @@
       "name": "(gdb) Launch",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceRoot}/intercept.so",
-      "args": [],
+      "program": "/usr/local/sdkman/candidates/java/current/bin/java",
+      "args": ["${workspaceFolder}/java/Example.java"],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
-      "environment": [],
+      "environment": [{"name": "LD_PRELOAD", "value": "${workspaceRoot}/intercept.so"}],
       "externalConsole": false,
       "MIMode": "gdb",
       "setupCommands": [
