--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "files.associations": {
     ".fantomasignore": "ignore",
-    "string.h": "c"
+    "string.h": "c",
+    "ptrace.h": "c",
+    "sched.h": "c",
+    "tracepoints.h": "c"
   }
 }
